[package]
name = "seqio"
version = "0.1.0"
edition = "2021"
authors = ["sharkLoc <mmtinfo@163.com>"]
rust-version = "1.65.0"
homepage = "https://github.com/sharkLoc/seqio"
description = "File reading and writing, support gzip format compression"
license = "MIT"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.28"
